--- a/src/components/Nav/styles.css
+++ b/src/components/Nav/styles.css
@@ -1,12 +1,13 @@
 nav {
   height: 80px;
   width: 100%;
-  background-color: #505050;
+  background-color: transparent;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
   padding: 0 50px;
+  margin: 0 0 200px 0;
 }
 
 nav .links,
