--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
+  position: absolute;
 }
 
 .hero h1 {
@@ -17,6 +17,7 @@
 .hero h1 span {
   font-size: 80px;
   color: #22f9b8;
+  position: unset;
 }
 
 .hero h2 {
