--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -29,37 +29,12 @@
   align-items: center;
 }
 
-.hero h2 .stack-badge {
-  background-color: rgba(56, 121, 125, 0.7);
-  border-radius: 50%;
-  height: 60px;
-  width: 60px;
-  margin: 0 22px 0 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.hero h2 .stack-badge img {
-  height: 48px;
-  width: 48px;
-  border: none;
-}
-
-.hero button.jumper {
-  height: 50px;
-  width: 50px;
-  border: none;
-  outline: none;
-  background: rgba(255, 255, 255, 0.65);
-  border-radius: 50%;
-  cursor: pointer;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  bottom: 200px;
+.hero .label {
+  animation: typing 4s steps(120, end) infinite;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  white-space: nowrap; /* Keeps the content on a single line */
+  animation-direction: alternate-reverse;
+  letter-spacing: 0.3pt;
 }
 
 .hero .carrot {
@@ -68,8 +43,23 @@
   background-color: aquamarine;
   margin: 0 0 0 10px;
   animation-name: blinking;
-  animation-duration: 0.8s;
+  animation-duration: 0.4s;
   animation-iteration-count: infinite;
+}
+
+@keyframes typing {
+  0% {
+    width: 0;
+  }
+  30% {
+    width: 0;
+  }
+  60% {
+    width: 520px;
+  }
+  100% {
+    width: 520px;
+  }
 }
 
 @keyframes blinking {
