--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,7 +1,7 @@
 .button,
 button {
   padding: 15px 25px;
-  margin: 50px 0;
+  margin: 50px 5px;
   color: #fff;
   background-color: #5050507a;
   border-radius: 8px;
