--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -47,6 +47,12 @@
   animation-iteration-count: infinite;
 }
 
+.hero .row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 @keyframes typing {
   0% {
     width: 0;
