--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -54,6 +54,12 @@
   justify-content: space-between;
 }
 
+.hero .col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @keyframes typing {
   0% {
     width: 0;
