--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,8 +13,12 @@
   box-sizing: border-box;
 }
 
-span {
-  color: #2c8067;
+footer {
   position: absolute;
   bottom: 100px;
+}
+
+footer span {
+  color: #2c8067;
+  margin: 3px 0;
 }
