--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -2,35 +2,41 @@
   height: 100vh;
   width: 100%;
   background: linear-gradient(360deg, #22f9b8 0%, #505050 100%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   position: absolute;
 }
 
-.hero h1 {
+.hero .container {
+  height: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 200px 0 0 0;
+}
+
+.hero .container h1 {
   color: #fff;
-  font-size: 80px;
+  font-size: 5rem;
   margin: 0 0 30px 0;
 }
 
-.hero h1 span {
-  font-size: 80px;
+.hero .container h1 span {
+  font-size: 5rem;
   color: #22f9b8;
   position: unset;
   margin: 0 0 0 23px;
 }
 
-.hero h2 {
+.hero .container h2 {
   text-transform: uppercase;
-  font-size: 50px;
+  font-size: 3.125rem;
   color: #87d2bc;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.hero .label {
+.hero .container .label {
   animation: typing 4s steps(120, end) infinite;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   white-space: nowrap; /* Keeps the content on a single line */
@@ -38,7 +44,7 @@
   letter-spacing: 0.3pt;
 }
 
-.hero .carrot {
+.hero .container .carrot {
   height: 50px;
   width: 25px;
   background-color: aquamarine;
@@ -48,13 +54,13 @@
   animation-iteration-count: infinite;
 }
 
-.hero .row {
+.hero .container .row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.hero .col {
+.hero .container .col {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -93,5 +99,32 @@
   }
   100% {
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .hero .container h1,
+  .hero .container h1 span {
+    font-size: 4rem;
+  }
+  .hero .container h2 {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .hero .container h1,
+  .hero .container h1 span {
+    font-size: 3.4rem;
+  }
+  .hero .container h2 {
+    font-size: 1.4rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .hero .container h1,
+  .hero .container h1 span {
+    font-size: 2.5rem;
   }
 }
