Adiciona display flex no container

--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -3,6 +3,8 @@
   width: 100%;
   background: linear-gradient(360deg, #22f9b8 0%, #505050 100%);
   position: absolute;
+  display: flex;
+  flex-direction: column;
 }
 
 .hero .container {
