--- a/src/components/Nav/styles.css
+++ b/src/components/Nav/styles.css
@@ -15,6 +15,7 @@ nav .links,
   display: flex;
   flex-direction: row;
   align-items: center;
+  -webkit-tap-highlight-color: transparent;
 }
 
 nav .links {
