Reduz o margin-top do container em telas de dispositivos móveis

--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -134,6 +134,7 @@
 @media screen and (max-width: 450px) {
   .hero .container {
     padding: 0 25px;
+    margin: 150px 0 0 0;
   }
   .hero .container h1 {
     display: grid;
