--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -77,6 +77,22 @@ footer span {
   margin: 3px 0;
 }
 
+.move-up {
+  -webkit-animation: move-up 2s;
+  animation: move-up 2s;
+}
+
+@keyframes move-up {
+  from {
+    opacity: 0;
+    transform: translateY(60px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
 @keyframes typing {
   0% {
     width: 0;
