--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -29,28 +29,33 @@
   margin: 0 0 0 23px;
 }
 
-.hero .container h2 {
-  text-transform: uppercase;
-  font-size: 3.125rem;
-  color: #87d2bc;
+.hero .container .label-block {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
+  width: auto;
 }
 
-.hero .container .label {
+.hero .container .label-block h2 {
+  text-transform: uppercase;
+  font-size: 3.125rem;
+  color: #87d2bc;
+}
+
+.hero .container .label-block h2 {
   animation: typing 4s steps(120, end) infinite;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   white-space: nowrap; /* Keeps the content on a single line */
   animation-direction: alternate-reverse;
   letter-spacing: 0.3pt;
+  margin: 0 10px 0 0;
 }
 
-.hero .container .carrot {
+.hero .container .label-block .carrot {
   height: 50px;
   width: 25px;
   background-color: aquamarine;
-  margin: 0 0 0 10px;
   animation-name: blinking;
   animation-duration: 0.4s;
   animation-iteration-count: infinite;
@@ -101,10 +106,10 @@ footer span {
     width: 0;
   }
   60% {
-    width: 520px;
+    width: 100%;
   }
   100% {
-    width: 520px;
+    width: 100%;
   }
 }
 
@@ -134,8 +139,13 @@ footer span {
   .hero .container h1 span {
     font-size: 4rem;
   }
-  .hero .container h2 {
+  .hero .container .label-block h2 {
     font-size: 2rem;
+    margin: 0 5px 0 0;
+  }
+  .hero .container .label-block .carrot {
+    height: 30px;
+    width: 15px;
   }
 }
 
@@ -144,8 +154,13 @@ footer span {
   .hero .container h1 span {
     font-size: 3.4rem;
   }
-  .hero .container h2 {
+  .hero .container .label-block h2 {
     font-size: 1.4rem;
+    margin: 0 3px 0 0;
+  }
+  .hero .container .label-block .carrot {
+    height: 20px;
+    width: 10px;
   }
 }
 
