--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,8 +1,7 @@
 .hero {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background: linear-gradient(360deg, #22f9b8 0%, #505050 100%);
-  position: absolute;
   display: flex;
   flex-direction: column;
 }
@@ -74,7 +73,7 @@
 }
 
 footer {
-  margin: 120px 0 0 0;
+  margin: 120px 0 50px 0;
 }
 
 footer span {
