--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -34,6 +34,7 @@
   align-items: center;
   justify-content: center;
   width: auto;
+  margin: 0 0 30px 0;
 }
 
 .hero .container .label-block h2 {
