Altera a palheta de cores do site e faz alguns ajustes estruturais

--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,24 +1,27 @@
 .button,
 button {
-  padding: 15px 25px;
+  padding: 15px 30px;
   margin: 50px 5px;
-  color: #fff;
-  background-color: #5050507a;
-  border-radius: 8px;
+  color: #000;
+  background-color: #00000000;
+  border-radius: 50px;
   cursor: pointer;
-  border: none;
+  border: 1px solid #3d3d3d;
   outline: none;
   text-decoration: none;
+  transition: ease-in 0.2s;
 }
 
 .button:hover,
 button:hover {
-  background-color: #50505094;
+  background-color: #000;
+  border: 1px solid #000;
+  color: #fff;
 }
 
 .button:active,
 button:active {
-  background-color: #5050507a;
+  background-color: #e1e1e1;
 }
 
 .button img,
