--- a/src/components/Nav/styles.css
+++ b/src/components/Nav/styles.css
@@ -36,21 +36,22 @@ nav .languages .item img {
 }
 
 nav .links .item {
-  padding: 8px 15px;
+  padding: 8px 20px;
   margin: 0 5px;
-  color: #fff;
+  color: #3d3d3d;
   background-color: transparent;
-  border-radius: 8px;
+  border-radius: 50px;
   text-transform: uppercase;
+  transition: ease-in 0.2s;
 }
 
 nav .links .item.active {
-  background-color: rgba(108, 212, 131, 0.19);
-  color: #22f9b8;
+  background-color: #7d7d7d30;
+  color: #3d3d3d;
 }
 
 nav .links .item:hover {
-  background-color: rgba(108, 212, 131, 0.19);
+  background-color: #49494930;
 }
 
 nav .links .item a:link,
@@ -60,7 +61,7 @@ nav .links .item a:active {
 }
 
 nav .links .item a:hover {
-  color: #22f9b8;
+  color: #000;
 }
 
 @media screen and (max-width: 550px) {
