--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,19 +1,22 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Poppins, sans-serif;
   font-size: 1rem;
 }
 
 ::selection {
   color: #fff;
-  background: #87d2bc;
+  background: #878787;
+  -webkit-text-fill-color: #fff !important;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  letter-spacing: 0.02rem;
 }
 
 body {
-  background: #22f9b8;
+  background: linear-gradient(130deg, #fff 0%, #e2e2e2 50%, #fff 100%);
+  background-attachment: fixed;
 }
