--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,7 +1,6 @@
 .hero {
   height: 100%;
   width: 100%;
-  background: linear-gradient(360deg, #22f9b8 0%, #505050 100%);
   display: flex;
   flex-direction: column;
 }
@@ -16,16 +15,20 @@
 }
 
 .hero .container h1 {
-  color: #fff;
+  color: #3d3d3d;
   font-size: 5rem;
   margin: 0 0 30px 0;
 }
 
 .hero .container h1 span {
   font-size: 5rem;
-  color: #22f9b8;
   position: unset;
   margin: 0 0 0 23px;
+  color: #3d6798;
+  background: linear-gradient(45deg, #3d6798, #983d3d);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .hero .container .label-block {
@@ -40,7 +43,7 @@
 .hero .container .label-block h2 {
   text-transform: uppercase;
   font-size: 3.125rem;
-  color: #87d2bc;
+  color: #878787;
 }
 
 .hero .container .label-block h2 {
@@ -55,10 +58,11 @@
 .hero .container .label-block .carrot {
   height: 50px;
   width: 25px;
-  background-color: aquamarine;
+  background-color: #878787;
   animation-name: blinking;
   animation-duration: 0.4s;
   animation-iteration-count: infinite;
+  border-radius: 3px;
 }
 
 .row {
@@ -78,7 +82,7 @@ footer {
 }
 
 footer span {
-  color: #2c8067;
+  color: #7d7d7d;
   margin: 3px 0;
 }
 
