--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -37,13 +37,13 @@
   align-items: center;
   justify-content: center;
   width: auto;
-  margin: 0 0 30px 0;
 }
 
 .hero .container .label-block h2 {
   text-transform: uppercase;
   font-size: 3.125rem;
   color: #878787;
+  margin: 0 10px 0 0;
 }
 
 .hero .container .label-block h2 {
@@ -52,7 +52,6 @@
   white-space: nowrap; /* Keeps the content on a single line */
   animation-direction: alternate-reverse;
   letter-spacing: 0.3pt;
-  margin: 0 10px 0 0;
 }
 
 .hero .container .label-block .carrot {
@@ -69,6 +68,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding: 100px 0;
+  gap: 15px;
 }
 
 .col {
@@ -186,6 +187,9 @@ footer span {
   }
   .hero .container h1 span {
     margin: 0;
+  }
+  .row {
+    flex-direction: column;
   }
   footer {
     margin: 50px 0 0 0;
