--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -192,7 +192,7 @@ footer span {
     flex-direction: column;
   }
   footer {
-    margin: 50px 0 0 0;
+    margin: 30px 0 70px 0;
   }
 }
 
@@ -201,6 +201,6 @@ footer span {
     margin: 90px 0 0 0;
   }
   footer {
-    margin: 30px 0 0 0;
+    margin: 30px 0 70px 0;
   }
 }
