--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -81,11 +81,12 @@
 footer {
   margin: 120px 0 50px 0;
   text-align: center;
+  padding: 0 25px;
 }
 
 footer span {
   color: #7d7d7d;
-  margin: 3px 0;
+  margin-top: 15px;
 }
 
 .move-up {
