--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
 
 ::selection {
   color: #fff;
-  background: #878787;
+  background: #000;
   -webkit-text-fill-color: #fff !important;
 }
 
@@ -23,5 +23,5 @@ html {
 body {
   background: linear-gradient(130deg, #fff 0%, #e2e2e2 50%, #fff 100%);
   background-attachment: fixed;
-  min-height: 100%;
+  height: 100vh;
 }
