--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,7 @@ html {
 }
 
 body {
+  background-color: #f8f8f8;
   background: linear-gradient(130deg, #fff 0%, #e2e2e2 50%, #fff 100%);
   background-attachment: fixed;
   height: 100vh;
